deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eunho-invitation
  labels:
    app: eunho-invitation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eunho-invitation
  template:
    metadata:
      labels:
        app: eunho-invitation
    spec:
      containers:
      - name: eunho-invitation
        image: 558846430793.dkr.ecr.ap-northeast-2.amazonaws.com/eunho-invitation:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
