deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eunho-invitation-service
  labels:
    app: eunho-invitation
spec:
  selector:
    app: eunho-invitation
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
